--- a/css/main.css
+++ b/css/main.css
@@ -307,6 +307,21 @@ body .container .col-sm-6 > .container p span {
   font-weight: 700;
 }
 
+body .container a {
+  background-color: #B7C8D3;
+  margin: 1.5rem 0;
+}
+
+body .container a:hover {
+  background-color: #EDECE8;
+}
+
+body .container a i {
+  padding: .5rem;
+  font-size: 20px;
+  color: #08478C;
+}
+
 body footer .container {
   padding: 1rem 0 0 0;
 }
