--- a/css/main.scss
+++ b/css/main.scss
@@ -328,6 +328,18 @@ body {
                     color: $primary-color-dark;
                     font-weight: 700;
                 }
+            } 
+        }
+        a {
+            background-color: $body-color-dark;
+            margin: 1.5rem 0;
+            &:hover {
+                background-color: $body-color-light;
+            }
+            i {
+                padding: .5rem;
+                font-size: 20px;
+                color: $primary-color-dark;
             }
         }
     }
