--- a/css/main.scss
+++ b/css/main.scss
@@ -70,7 +70,8 @@ body {
 
             li.nav-item>div.dropdown-menu {
                 background-color: $body-color-dark;
-                border: none;
+                border: 4px solid $body-color;
+                margin-top: .5em;
             }
 
             div.dropdown-menu>a.dropdown-item {
