--- a/css/main.scss
+++ b/css/main.scss
@@ -31,7 +31,65 @@ body {
     margin: 0;
     font-size: 16px;
     background: $body-color;
-
+    .loaderArea {
+        background: linear-gradient(90deg, $body-color-dark 10%, $body-color 90%);
+        overflow: hidden;
+        position: fixed;
+        left: 0;
+        top: 0;
+        right:0;
+        bottom:0;
+        z-index: 100000;
+        .loader {
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  left: 50%;
+  margin-left: -20px;
+  top: 50%;
+  margin-top: -20px;
+}
+ 
+.loader:before,
+.loader:after {
+  content: "";
+  height: 40px;
+  width: 40px;
+  border: 8px solid rgba(255,255,255,.5);
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+}
+ 
+.loader:before {
+  animation: animate 2s infinite linear;
+}
+ 
+@keyframes animate {
+  0% {
+    transform: rotate(0) skew(0);
+  }
+   
+  100% {
+    transform: rotate(180deg) skew(360deg);
+  }
+}
+ 
+ 
+.loader:after {
+  animation: animate2 2s infinite linear;
+}
+ 
+@keyframes animate2 {
+  0% {
+    transform: rotate(0) skew(0);
+  }
+   
+  100% {
+    transform: rotate(-180deg) skew(-360deg);
+  }
+}
+      }
     .container>nav {
         background-color: $body-color-dark;
 
@@ -191,10 +249,14 @@ body {
                 .row {
 
                     .col-sm-4 {
-                        .container>p {
+                        .container {
+                            padding: 1rem;
+                               p {                          
                             background-color: $body-color;
-                            padding: 1.5rem;
+                            padding: .1rem;
                         }
+                    }
+                    
 
                         .container-fluid {
                             padding: 2.3rem 0;
@@ -258,6 +320,7 @@ body {
                                 .container {
                                     padding: 0 8.2rem;
                                     margin: 0;
+                                    background-color: transparent;
 
                                     img {
                                         width: 580px;
