--- a/css/main.scss
+++ b/css/main.scss
@@ -430,6 +430,20 @@ body {
         }
     }
 
+    .about {
+        padding: 1rem;
+        .col-sm-6 {
+            background-color: $body-color-dark;
+            h5 {
+                color: $primary-color;
+            }
+            img {
+                width: 600px;
+                padding: 2rem;
+            }
+        }
+    }
+
     footer {
 
         .container {
