--- a/css/main.scss
+++ b/css/main.scss
@@ -118,7 +118,8 @@ body {
         }
 
         .navbar-brand {
-            padding:0 .5rem;
+            padding: 0 .5rem;
+
             img {
                 height: 25px;
             }
@@ -262,11 +263,21 @@ body {
 
                     .col-sm-4 {
                         .container {
-                            padding: 1rem;
+                            padding: 1.5rem;
+
+                            h6 {
+                                color: $primary-color-dark;
+                                font-size: 16px;
+                            }
+
+                            li {
+                                border: none;
+
+                            }
 
                             p {
                                 background-color: $body-color;
-                                padding: .1rem;
+                                padding: .15rem;
                             }
                         }
 
@@ -380,14 +391,36 @@ body {
 
     table.table {
         margin-bottom: 0;
+        padding: 0;
+        margin: 0;
 
-        tr {
-            background-color: $body-color-dark;
-            font-size: 16px;
+        @media (max-width: 500px) {
+            tr {
+                background-color: $body-color-dark;
+                font-size: 9px;
+                padding: 0;
+                margin: 0;
 
-            img {
-                width: 130px;
+                img {
+                    width: 70px;
+                }
             }
+
+        }
+
+
+
+        @media (min-width: 1200px) {
+            tr {
+                background-color: $body-color-dark;
+                
+                font-size: 16px;
+
+                img {
+                    width: 150px;
+                }
+            }
+
         }
     }
 
@@ -432,11 +465,14 @@ body {
 
     .about {
         padding: 1rem;
+
         .col-sm-6 {
             background-color: $body-color-dark;
+
             h5 {
                 color: $primary-color;
             }
+
             img {
                 width: 600px;
                 padding: 2rem;
@@ -463,7 +499,7 @@ body {
                 }
 
                 img.opzht {
-                    height: 80px;
+                    height: 70px;
                 }
             }
         }
