--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ body {
   background: #CCDDE8;
 }
 
-body .loaderArea {
+.loaderArea {
   background: -webkit-gradient(linear, left top, right top, color-stop(10%, #08478C), color-stop(90%, #006894));
   background: linear-gradient(90deg, #08478C 10%, #006894 90%);
   overflow: hidden;
@@ -35,7 +35,7 @@ body .loaderArea {
   z-index: 100000;
 }
 
-body .loaderArea .loader {
+.loaderArea .loader {
   height: 40px;
   width: 40px;
   position: absolute;
@@ -45,8 +45,8 @@ body .loaderArea .loader {
   margin-top: -20px;
 }
 
-body .loaderArea .loader:before,
-body .loaderArea .loader:after {
+.loaderArea .loader:before,
+.loaderArea .loader:after {
   content: "";
   height: 40px;
   width: 40px;
@@ -56,7 +56,7 @@ body .loaderArea .loader:after {
   top: 0;
 }
 
-body .loaderArea .loader:before {
+.loaderArea .loader:before {
   -webkit-animation: animate 2s infinite linear;
           animation: animate 2s infinite linear;
 }
@@ -83,7 +83,7 @@ body .loaderArea .loader:before {
   }
 }
 
-body .loaderArea .loader:after {
+.loaderArea .loader:after {
   -webkit-animation: animate2 2s infinite linear;
           animation: animate2 2s infinite linear;
 }
@@ -110,11 +110,11 @@ body .loaderArea .loader:after {
   }
 }
 
-body .container > nav {
+.container > nav {
   background-color: #B7C8D3;
 }
 
-body .container > nav .email > a i.fas {
+.container > nav .email > a i.fas {
   font-size: 15px;
   border: 1px solid #006894;
   border-radius: .3rem;
@@ -123,208 +123,208 @@ body .container > nav .email > a i.fas {
   color: #006894;
 }
 
-body .container > nav .email > a i.fas:hover {
+.container > nav .email > a i.fas:hover {
   color: #08478C;
   border-color: #08478C;
 }
 
-body .container > nav .number-phone {
+.container > nav .number-phone {
   color: #006894;
 }
 
-body .container > nav .navbar-brand {
+.container > nav .navbar-brand {
   padding: 0 .5rem;
 }
 
-body .container > nav .navbar-brand img {
+.container > nav .navbar-brand img {
   height: 25px;
 }
 
-body .container > nav .navbar-nav li.nav-item > a.nav-link {
+.container > nav .navbar-nav li.nav-item > a.nav-link {
   color: #000000e6;
 }
 
-body .container > nav .navbar-nav li.nav-item > a.nav-link:hover {
+.container > nav .navbar-nav li.nav-item > a.nav-link:hover {
   color: #008AC3;
 }
 
-body .container > nav .navbar-nav li.active > a.nav-link {
+.container > nav .navbar-nav li.active > a.nav-link {
   color: #006894;
 }
 
-body .container > nav .navbar-nav li.nav-item > div.dropdown-menu {
+.container > nav .navbar-nav li.nav-item > div.dropdown-menu {
   background-color: #B7C8D3;
   border: 4px solid #CCDDE8;
   margin-top: .5em;
 }
 
-body .container > nav .navbar-nav div.dropdown-menu > a.dropdown-item:hover {
+.container > nav .navbar-nav div.dropdown-menu > a.dropdown-item:hover {
   background-color: transparent;
   color: #006894;
 }
 
-body .container > .row {
+.container > .row {
   background-color: #CCDDE8;
   padding: 0;
   margin: 0;
 }
 
-body .container > .row .col-md-7 {
+.container > .row .col-md-7 {
   padding: 1rem;
   margin: 0;
 }
 
 @media (min-width: 320px) {
-  body .container > .row .col-md-7 .carousel-item img {
+  .container > .row .col-md-7 .carousel-item img {
     height: 300px;
   }
 }
 
 @media (min-width: 900px) {
-  body .container > .row .col-md-7 .carousel-item img {
+  .container > .row .col-md-7 .carousel-item img {
     height: 35px;
   }
 }
 
 @media (min-width: 1000px) {
-  body .container > .row .col-md-7 .carousel-item img {
+  .container > .row .col-md-7 .carousel-item img {
     height: 580px;
   }
 }
 
 @media (min-width: 1300px) {
-  body .container > .row .col-md-7 .carousel-item img {
+  .container > .row .col-md-7 .carousel-item img {
     height: 650px;
   }
 }
 
 @media (min-width: 1900px) {
-  body .container > .row .col-md-7 .carousel-item img {
+  .container > .row .col-md-7 .carousel-item img {
     height: 850px;
   }
 }
 
-body .container > .row .col-sm-5 {
+.container > .row .col-sm-5 {
   padding: 0;
   margin: 1rem 0;
   background-color: #B7C8D3;
 }
 
-body .container > .row .col-sm-5 h5 {
+.container > .row .col-sm-5 h5 {
   color: #08478C;
   margin: 1rem 0 0 1rem;
   padding: 0;
 }
 
-body .container > .row .col-sm-5 .p-2 {
+.container > .row .col-sm-5 .p-2 {
   margin: 0.8rem;
   background-color: #CCDDE8;
 }
 
-body .container > .row .col-sm-5 .p-2 .date {
+.container > .row .col-sm-5 .p-2 .date {
   color: #08478C;
   padding: .2rem 1rem;
   font-size: 14px;
   font-weight: 700;
 }
 
-body .container > .row .col-sm-5 .p-2 .d-flex {
+.container > .row .col-sm-5 .p-2 .d-flex {
   padding: 0.35rem;
 }
 
-body .container > .row .col-sm-5 .p-2 .d-flex .info {
+.container > .row .col-sm-5 .p-2 .d-flex .info {
   padding: .5rem;
 }
 
-body .container > .row .col-sm-5 .p-2 .d-flex .info > a img {
+.container > .row .col-sm-5 .p-2 .d-flex .info > a img {
   height: 100px;
 }
 
-body .container > .row .col-sm-5 .p-2 .d-flex .info > a {
+.container > .row .col-sm-5 .p-2 .d-flex .info > a {
   color: #08478C;
 }
 
-body #accordion .card {
+#accordion .card {
   background-color: #CCDDE8;
   border: none;
 }
 
-body #accordion .card .card-header {
+#accordion .card .card-header {
   background-color: #CCDDE8;
 }
 
-body #accordion .card .card-header a > h5.mb-0 {
+#accordion .card .card-header a > h5.mb-0 {
   color: #006894;
 }
 
-body #accordion .card .card-header a > h5.mb-0:hover {
+#accordion .card .card-header a > h5.mb-0:hover {
   text-decoration: none;
   color: #08478C;
 }
 
-body #accordion .card .card-body {
+#accordion .card .card-body {
   background-color: #B7C8D3;
 }
 
-body #accordion .card .card-body .row .col-sm-4 .container {
+#accordion .card .card-body .row .col-sm-4 .container {
   padding: 1.5rem;
 }
 
-body #accordion .card .card-body .row .col-sm-4 .container h6 {
+#accordion .card .card-body .row .col-sm-4 .container h6 {
   color: #08478C;
   font-size: 16px;
 }
 
-body #accordion .card .card-body .row .col-sm-4 .container li {
+#accordion .card .card-body .row .col-sm-4 .container li {
   border: none;
 }
 
-body #accordion .card .card-body .row .col-sm-4 .container p {
+#accordion .card .card-body .row .col-sm-4 .container p {
   background-color: #CCDDE8;
   padding: .15rem;
 }
 
-body #accordion .card .card-body .row .col-sm-4 .container-fluid {
+#accordion .card .card-body .row .col-sm-4 .container-fluid {
   padding: 2.3rem 0;
 }
 
 @media (min-width: 319px) {
-  body #accordion .card .card-body .row .col-sm-4 .container-fluid .img-rgv {
+  #accordion .card .card-body .row .col-sm-4 .container-fluid .img-rgv {
     height: 205px;
   }
 }
 
 @media (min-width: 374px) {
-  body #accordion .card .card-body .row .col-sm-4 .container-fluid .img-rgv {
+  #accordion .card .card-body .row .col-sm-4 .container-fluid .img-rgv {
     height: 235px;
   }
 }
 
 @media (min-width: 767px) {
-  body #accordion .card .card-body .row .col-sm-4 .container-fluid .img-rgv {
+  #accordion .card .card-body .row .col-sm-4 .container-fluid .img-rgv {
     height: 165x;
   }
 }
 
 @media (min-width: 1024px) {
-  body #accordion .card .card-body .row .col-sm-4 .container-fluid .img-rgv {
+  #accordion .card .card-body .row .col-sm-4 .container-fluid .img-rgv {
     height: 235px;
   }
 }
 
 @media (min-width: 1240px) {
-  body #accordion .card .card-body .row .col-sm-4 .container-fluid .img-rgv {
+  #accordion .card .card-body .row .col-sm-4 .container-fluid .img-rgv {
     height: 285px;
   }
 }
 
 @media (min-width: 1440px) {
-  body #accordion .card .card-body .row .col-sm-4 .container-fluid .img-rgv {
+  #accordion .card .card-body .row .col-sm-4 .container-fluid .img-rgv {
     height: 290px;
   }
 }
 
-body #accordion .card .card-body .row .col-sm-4 button.btn {
+#accordion .card .card-body .row .col-sm-4 button.btn {
   color: #08478C;
   background-color: #CCDDE8;
   margin: 1.5rem 0;
@@ -332,158 +332,160 @@ body #accordion .card .card-body .row .col-sm-4 button.btn {
   border: 2px solid #006894;
 }
 
-body #accordion .card .card-body .row .col-sm-4 .modal-content {
+#accordion .card .card-body .row .col-sm-4 .modal-content {
   padding: 0;
   margin: 0;
 }
 
-body #accordion .card .card-body .row .col-sm-4 .modal-content .modal-body {
+#accordion .card .card-body .row .col-sm-4 .modal-content .modal-body {
   padding: 0;
   margin: 0;
 }
 
-body #accordion .card .card-body .row .col-sm-4 .modal-content .modal-body .container {
+#accordion .card .card-body .row .col-sm-4 .modal-content .modal-body .container {
   padding: 0 8.2rem;
   margin: 0;
   background-color: transparent;
 }
 
-body #accordion .card .card-body .row .col-sm-4 .modal-content .modal-body .container img {
+#accordion .card .card-body .row .col-sm-4 .modal-content .modal-body .container img {
   width: 580px;
 }
 
-body #accordion .card .card-body .row .col-sm-4 ul.list-group > li {
+#accordion .card .card-body .row .col-sm-4 ul.list-group > li {
   background-color: #CCDDE8;
 }
 
-body #accordion .card .card-body .row .col-sm-4 ul.list-group > li img {
+#accordion .card .card-body .row .col-sm-4 ul.list-group > li img {
   height: 23px;
 }
 
-body #carouselId {
+#carouselId {
   background-color: #CCDDE8;
 }
 
-body #carouselId h4 {
+#carouselId h4 {
   color: #08478C;
 }
 
-body #carouselId .row {
+#carouselId .row {
   padding: 1.2rem;
 }
 
-body #carouselId .row .col-sm-4 {
+#carouselId .row .col-sm-4 {
   padding: 1rem;
 }
 
-body #carouselId .row .col-sm-4 img {
+#carouselId .row .col-sm-4 img {
   height: 50px;
 }
 
-body table.table {
+table.table {
   margin-bottom: 0;
   padding: 0;
   margin: 0;
 }
 
 @media (max-width: 500px) {
-  body table.table tr {
+  table.table tr {
     background-color: #B7C8D3;
     font-size: 9px;
     padding: 0;
     margin: 0;
   }
-  body table.table tr img {
+  table.table tr td p {
+    padding: 5rem;
+  }
+  table.table tr img {
     width: 70px;
   }
 }
 
 @media (min-width: 1200px) {
-  body table.table tr {
+  table.table tr {
     background-color: #B7C8D3;
-    padding: 1rem;
     font-size: 16px;
   }
-  body table.table tr img {
-    width: 150px;
+  table.table tr img {
+    width: 120px;
   }
 }
 
-body .container {
+.container {
   background-color: #CCDDE8;
 }
 
-body .container h5 {
+.container h5 {
   padding: 0.5rem 1.5rem;
   color: #08478C;
 }
 
-body .container .col-sm-6 > .container {
+.container .col-sm-6 > .container {
   background-color: #B7C8D3;
   padding: 1rem;
   border-radius: 0.35rem;
 }
 
-body .container .col-sm-6 > .container p {
+.container .col-sm-6 > .container p {
   font-size: 13px;
 }
 
-body .container .col-sm-6 > .container p span {
+.container .col-sm-6 > .container p span {
   color: #08478C;
   font-weight: 700;
 }
 
-body .container .col-sm-6 > a {
+.container .col-sm-6 > a {
   background-color: #B7C8D3;
   margin: 1.5rem 0;
 }
 
-body .container .col-sm-6 > a:hover {
+.container .col-sm-6 > a:hover {
   background-color: #EDECE8;
 }
 
-body .container .col-sm-6 > a i {
+.container .col-sm-6 > a i {
   padding: .5rem;
   font-size: 20px;
   color: #08478C;
 }
 
-body .about {
+.about {
   padding: 1rem;
 }
 
-body .about .col-sm-6 {
+.about .col-sm-6 {
   background-color: #B7C8D3;
 }
 
-body .about .col-sm-6 h5 {
+.about .col-sm-6 h5 {
   color: #006894;
 }
 
-body .about .col-sm-6 img {
+.about .col-sm-6 img {
   width: 600px;
   padding: 2rem;
 }
 
-body footer .container {
+footer .container {
   padding: 1rem 0 0 0;
 }
 
-body footer .container .row {
+footer .container .row {
   background-color: #B7C8D3;
   padding: 1rem 0;
 }
 
-body footer .container .row .col-sm-6 > p {
+footer .container .row .col-sm-6 > p {
   font-size: 12px;
 }
 
-body footer .container .row .col-sm-6 > img {
+footer .container .row .col-sm-6 > img {
   height: 30px;
   padding: 0 2rem;
 }
 
-body footer .container .row img.opzht {
+footer .container .row img.opzht {
   height: 70px;
 }
 /*# sourceMappingURL=main.css.map */
